replace Java 21+ function